--- a/css/styles.css
+++ b/css/styles.css
@@ -167,7 +167,7 @@ body {
         border: 1px solid rgba(0, 0, 0, 0.1);
     }
 
-    .mobile-menu-close__icon {
+    .mobile-menu-close-icon {
         position: absolute;
         top: 50%;
         left: 50%;
