--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,8 @@ img {
 
 button{
     cursor: pointer;
+    background: transparent;
+    border: none;
 }
 
 body {
@@ -65,6 +67,25 @@ body {
     clip: rect(0 0 0 0);
     overflow: hidden;
 }
+.container {
+    max-width: 428px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+@media screen and (min-width: 768px) {
+    .container {
+        max-width: 768px;
+    }
+    
+}
+@media screen and (min-width: 1200px) {
+    .container {
+        max-width: 1158px;
+    }
+    
+}
 /*HEADER*/
 .page-header {
     background-color: var(--page-background-color);
@@ -72,4 +93,51 @@ body {
     padding-top: 24px;
     padding-bottom: 24px;
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+
+.header-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.logo-header {
+    font-family: "Raleway", sans-serif;
+    font-weight: 800;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--logo-brand-color);
+    margin-right: 76px;
+    padding-top: 25.5px;
+    padding-bottom: 25.5px;
+
+}
+
+.logo-part-dark {
+    font-weight: 800;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--body-brand-color);
+}
+@media screen and (max-width: 767px) {
+    .menu {
+        display: none;
+    }
+    .contact-info {
+        display: none;
+    }
+}
+
+.menu-toggle {
+    line-height: 0;
+}
+
+@media screen and (max-width: 768px) {
+    .menu-toggle-icon {
+        fill: var(--overlay-color);
+    } 
 }
