--- a/css/styles.css
+++ b/css/styles.css
@@ -86,6 +86,7 @@ body {
     }
     
 }
+
 /*HEADER*/
 .page-header {
     background-color: var(--page-background-color);
@@ -102,17 +103,17 @@ body {
 }
 
 .logo-header {
-    font-family: "Raleway", sans-serif;
+    display: flex;
+    font-family: "Raleway";
+    font-style: normal;
     font-weight: 800;
     font-size: 18px;
-    line-height: 1.17;
+    line-height: 1.3;
+    align-items: center;
     letter-spacing: 0.03em;
+    text-decoration: none;
     text-transform: uppercase;
     color: var(--logo-brand-color);
-    margin-right: 76px;
-    padding-top: 25.5px;
-    padding-bottom: 25.5px;
-
 }
 
 .logo-part-dark {
@@ -140,4 +141,67 @@ body {
     .menu-toggle-icon {
         fill: var(--overlay-color);
     } 
+}
+
+/* MOBILE MENU */
+.menu-container {
+    display: flex;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    width: 100%;
+    height: 100%;
+    padding: 40px;
+    padding-top: 80px;
+    flex-direction: column;
+    position: fixed;
+    background-color: #ffffff;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+    transform: translateX(100%);
+    transition: transform 250ms ease-in-out;
+}
+
+.menu-container.is-open {
+    transform: translateX(0);
+}
+
+.menu-container .menu-toggle {
+    position: absolute;
+    top: 40px;
+    right: 40px;
+    width: 24px;
+    height: 24px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    background-color: var(--subtle-background-color);
+    fill: var(--hero-color);
+    transition: background-color var(--transition-duration)
+}
+
+.menu-toggle {
+    line-height: 0;
+}
+
+.mob-menu {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    margin-bottom: auto;
+}
+
+.mob-menu .link-mobile {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 40px;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+}
+
+.link-mobile {
+    color: var(--hero-color);
+    transition: color var(--transition-duration);
+}
+
+.menu-link-current {
+    color: var(--pressed-state-color);
 }
