--- a/css/styles.css
+++ b/css/styles.css
@@ -148,9 +148,8 @@ body {
     display: flex;
     top: 0;
     left: 0;
-    z-index: 1000;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     padding: 40px;
     padding-top: 80px;
     flex-direction: column;
@@ -186,7 +185,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 40px;
-    margin-bottom: auto;
+    margin-bottom: 100%;
 }
 
 .mob-menu .link-mobile {
@@ -204,4 +203,44 @@ body {
 
 .menu-link-current {
     color: var(--pressed-state-color);
+}
+
+.contacts-list-mobile {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    margin-bottom: 48px;
+}
+
+.mob-menu-tel {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.1;
+    letter-spacing: 0.02em;
+}
+
+.mob-menu-mail {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: var(--body-text-color);
+}
+
+.mob-social-networks {
+    display: flex;
+    justify-content: space-between;
+}
+.mobile-social-link {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        background-color: var(--logo-brand-color);
+}
+
+.footer-social-icon {
+    fill: var(--light-mode-background-color);
 }
