--- a/css/styles.css
+++ b/css/styles.css
@@ -124,7 +124,7 @@ body {
     text-transform: uppercase;
     color: var(--body-brand-color);
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
     .menu {
         display: none;
     }
@@ -137,9 +137,13 @@ body {
     line-height: 0;
 }
 
-@media screen and (max-width: 768px) {
+.menu-toggle-icon {
+    fill: var(--overlay-color)
+}
+
+@media screen and (min-width: 768px) {
     .menu-toggle-icon {
-        fill: var(--overlay-color);
+        display: none;
     } 
 }
 
@@ -243,4 +247,61 @@ body {
 
 .footer-social-icon {
     fill: var(--light-mode-background-color);
+}
+/* /MOBILE MENU */
+
+/* TABLET HEADER */
+@media screen and (min-width: 768px) {
+    .page-navigation {
+        display: flex;  
+    }
+
+    .logo-header {
+        margin-right: 120px;
+    }
+   
+    .menu {
+        display: flex;
+        align-items: center;
+        gap: 40px;
+    }
+    .menu-link {
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: var(--hero-color);
+        padding: 24px 0;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+    
+    .current {
+        position: relative;
+        color: var(--pressed-state-color);
+        }
+    
+    .current::after {
+        content: "";
+        position: absolute;
+        left: 0;
+        bottom: -1px;
+        width: 100%;
+        height: 4px;
+        background-color: var(--pressed-state-color);
+        border-radius: 2px;
+        } 
+    .contact-info {
+        display: flex;
+        flex-direction: column;
+        margin-left: auto;
+        gap: 4px;
+    }
+    .contact-info-item {
+        font-size: 16px;
+        font-style: normal;
+        line-height: 1.5;
+        letter-spacing: 0.02em; 
+        color: var(--body-text-color);
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 }
