--- a/css/styles.css
+++ b/css/styles.css
@@ -69,37 +69,44 @@ body {
 }
 .container {
     max-width: 428px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding: 0 15px;
+    margin: 0 auto;
 }
+
 @media screen and (min-width: 768px) {
     .container {
         max-width: 768px;
     }
-    
 }
+
 @media screen and (min-width: 1200px) {
     .container {
         max-width: 1158px;
     }
-    
 }
+
 
 /*HEADER*/
 .page-header {
     background-color: var(--page-background-color);
     border-bottom: 1px solid var(--subtle-background-color);
-    padding-top: 24px;
-    padding-bottom: 24px;
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
     display: flex;
-    align-items: center;
     justify-content: space-between;
+    align-items: center;
+
+    padding-top: 24px;
+    padding-bottom: 24px;
+}
+
+@media screen and (min-width: 768px) {
+    .header-container {
+        padding-top: 0;
+        padding-bottom: 0;
+    }
 }
 
 .logo-header {
@@ -252,9 +259,9 @@ body {
 
 /* TABLET HEADER */
 @media screen and (min-width: 768px) {
-    .page-header {
-            padding-top: 16px;
-            padding-bottom: 16px;
+    .header-container {
+            padding-top: 0;
+            padding-bottom: 0;
     }
 
     .page-navigation {
@@ -269,6 +276,9 @@ body {
         display: flex;
         align-items: center;
         gap: 40px;
+    }
+    .menu-item{
+        position: relative;
     }
     .menu-link {
         font-weight: 500;
@@ -315,7 +325,6 @@ body {
         margin-right: 76px;
     }
     .menu-link {
-        padding: 24px 0;
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         }
 .contact-info {
