--- a/css/styles.css
+++ b/css/styles.css
@@ -131,13 +131,12 @@ body {
     text-transform: uppercase;
     color: var(--body-brand-color);
 }
-@media screen and (max-width: 768px) {
-    .menu {
-        display: none;
-    }
-    .contact-info {
-        display: none;
-    }
+
+.menu {
+    display: none;
+}
+.contact-info {
+    display: none;
 }
 
 .menu-toggle {
@@ -260,12 +259,13 @@ body {
 /* TABLET HEADER */
 @media screen and (min-width: 768px) {
     .header-container {
-            padding-top: 0;
-            padding-bottom: 0;
+        padding-top: 0;
+        padding-bottom: 0;
     }
 
     .page-navigation {
-        display: flex;  
+        display: flex; 
+        align-items: center;
     }
 
     .logo-header {
@@ -281,6 +281,8 @@ body {
         position: relative;
     }
     .menu-link {
+        display: block;
+        padding: 24px 0;
         font-weight: 500;
         font-size: 16px;
         line-height: 1.5;
@@ -290,9 +292,9 @@ body {
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         }
     
+    
     .current {
-        position: relative;
-        color: var(--pressed-state-color);
+            color: var(--pressed-state-color);
         }
     
     .current::after {
@@ -323,15 +325,27 @@ body {
 @media screen and (min-width: 1200px) {
     .logo-header {
         margin-right: 76px;
-    }
+        }
     .menu-link {
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         }
-.contact-info {
+    .contact-info {
          flex-direction: row;
          gap: 40px;
-         margin-left: auto;
-}
+         margin-left: auto;  
+        }
+    .contact-info-item{
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+    .menu-link:hover,
+    .menu-link:focus {
+    color: var(--pressed-state-color);
+        }
+
+    .contact-info-item:hover,
+    .contact-info-item:focus {
+    color: var(--pressed-state-color);
+        }
 }
 
 /* HERO */
@@ -376,10 +390,27 @@ body {
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+@media (min-device-pixel-ratio: 2),
+(min-resolution: 192dpi),
+(min-resolution: 2dppx) and (max-width: 768px) {
+    .hero {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+            url('../images/back-groudn/mobile/Dark-bg@2x.jpg');
+    }
+}
+
 @media screen and (min-width: 768px) {
     .hero{
         background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/back-groudn/tablet/Dark-bg.jpg);
     }
+@media (min-device-pixel-ratio: 2),
+(min-resolution: 192dpi),
+(min-resolution: 2dppx) and (max-width: 1199px) {
+    .hero {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+            url('../images/back-groudn/tablet/Dark-bg@2x.jpg');
+    }
+}
     .main-title {
             width: 496px;
             font-size: 56px;
@@ -395,6 +426,14 @@ body {
             padding-top: 188px;
             padding-bottom: 188px;
         }
+@media (min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) and (min-width: 1200px) {
+    .hero {
+            background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+            url('../images/back-groudn/Desk/people-office\ 1@2x.jpg');
+            }
+        }
     button:hover,
     button:focus {
            background-color: var(--pressed-state-color);
@@ -409,3 +448,306 @@ body {
             margin-bottom: 48px;
             }
 }   
+
+/* WORK PRINCIPLES */
+
+.work-principles-section {
+    padding-top: 96px;
+    padding-bottom: 96px;
+}
+
+@media screen and (min-width: 1200px) {
+    .work-principles-section {
+        padding-top: 120px;
+        padding-bottom: 120px;
+    }
+}
+
+.work-principles-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    row-gap: 72px;
+}
+
+@media screen and (min-width: 768px) {
+    .work-principles-list {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        column-gap: 24px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .work-principles-list {
+        align-items: normal;
+        row-gap: 0;
+    }
+}
+
+.work-principles-item {
+    max-width: 396px;
+}
+
+@media screen and (min-width: 768px) {
+    .work-principles-item {
+        max-width: 356px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .work-principles-item {
+        max-width: 264px;
+    }
+}
+
+.icon-work-principles {
+    display: none;
+}
+
+@media screen and (min-width: 1200px) {
+    .icon-work-principles {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        height: 112px;
+        margin-bottom: 8px;
+
+        background-color: var(--light-mode-background-color);
+        border-radius: 4px;
+    }
+}
+.work-principles-description-title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    text-align: center;
+    margin-bottom: 8px;
+}
+
+@media screen and (min-width: 768px) {
+    .work-principles-description-title {
+        text-align: left;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .work-principles-description-title {
+        text-align: left; 
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2;
+    }
+}
+
+.work-principles-description-text {
+        font-weight: 500;
+        color: var(--body-text-color);
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+}
+
+@media screen and (min-width: 1200px) {
+    .work-principles-description-text {
+        font-weight: 400;
+    }
+}
+
+/* OUR SERVICES */
+.our-services-section {
+    display: none;
+}
+
+@media screen and (min-width: 1200px) {
+    .our-services-section {
+        padding-bottom: 120px;
+        display: block;
+    }
+}
+
+.our-services-section-title {
+    color: var(--body-brand-color);
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+}
+
+.our-services-section-title {
+    margin-bottom: 72px;
+    text-align: center;
+}
+
+.our-services-list {
+    display: flex;
+    gap: 24px;
+}
+/* OUR TEAM */
+
+.our-team-section {
+    background-color: var(--light-mode-background-color);
+    padding-top: 96px;
+    padding-bottom: 128px;
+    text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+    .our-team-section {
+        padding-top: 96px;
+        padding-bottom: 104px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .our-team-section {
+        padding-top: 120px;
+        padding-bottom: 120px;
+    }
+}
+
+.our-team-section-title {
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: var(--hero-color);        
+    margin-bottom: 72px;
+}
+
+.our-team-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    row-gap: 72px;
+}
+
+@media screen and (min-width: 768px) {
+    .our-team-list {
+        gap: 64px 24px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .our-team-list {
+        gap: 24px;
+    }
+}
+.our-team-list-item {
+    border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
+    background: #ffffff;
+}
+
+@media screen and (min-width: 1200px) {
+    .our-team-list-item {
+        flex-basis: calc((100% - 72px) / 4);
+    }
+}
+.our-team-container {
+    padding: 32px 0;
+}
+.our-team-description-title {
+    margin: 0 0 8px 0;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: var(--overlay-color);
+}
+.our-team-description-text{
+    margin-bottom: 8px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--body-text-color);
+}
+
+.social-networks {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+}
+.social-list {
+    width: 40px;
+    height: 40px;
+}
+.social-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    background-color: var(--logo-brand-color);
+    border-radius: 50%;    
+    fill:var(--page-background-color);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.social-link:hover,
+.social-link:focus {
+    background-color: var(--pressed-state-color);
+}
+/* CUSTOMERS LIST */
+.customers {
+    padding-top: 96px;
+    padding-bottom: 96px;
+}
+
+@media screen and (min-width: 1200px) {
+    .customers {
+        padding-top: 120px;
+        padding-bottom: 120px;
+    }
+}
+
+.title-customers {
+    margin-bottom: 72px;
+    text-align: center;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    color: var(--body-brand-color);
+}
+.customers-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 72px 16px;
+    justify-content: center;
+}
+
+@media screen and (min-width: 768px) {
+    .customers-list {
+        gap: 72px 24px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .customers-list {
+        gap: 24px;
+    }
+}
+.customers-item {
+    width: 135px;
+    height: 88px;
+}
+
+@media screen and (min-width: 428px) {
+    .customers-item {
+        width: 190px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .customers-item {
+        width: 168px;
+    }
+}
