--- a/css/styles.css
+++ b/css/styles.css
@@ -751,3 +751,505 @@ body {
         width: 168px;
     }
 }
+
+.log-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+
+    border: 1px solid var(--helper-text-color);
+    border-radius: 4px;
+    fill: var(--helper-text-color);
+
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+            color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.log-link:hover,
+.log-link:focus {
+    fill: var(--pressed-state-color);
+    border-color: var(--pressed-state-color);
+}
+/* FOOTER */
+.page-footer {
+    padding-top: 96px;
+    padding-bottom: 96px;
+    background: var(--body-brand-color);
+}
+
+.social-icons {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+@media screen and (min-width: 768px) {
+    .social-icons {
+        gap: 72px 24px;
+        justify-content: flex-start;
+        width: 552px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .social-icons {
+        gap: 0;
+        justify-content: center;
+        width: 100%;
+    }
+}
+.footer-logo {
+    max-width: 268px;
+    margin-bottom: 72px;
+}
+
+@media screen and (min-width: 768px) {
+    .footer-logo {
+        max-width: 264px;
+        margin-bottom: 0;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .footer-logo {
+        margin-right: 120px;
+    }
+}
+
+.logo-footer {
+    color: var(--logo-brand-color);
+    display: block;
+    text-align: center;
+    margin-bottom: 16px;
+    font-family: 'Raleway', sans-serif;
+    font-size: 18px;
+    font-weight: 800;
+    line-height: 1.16;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    text-decoration: none;
+
+}
+
+.logo-part-light {
+    color: var(--light-mode-background-color);
+}
+
+@media screen and (min-width: 768px) {
+    .logo-footer {
+        text-align: left;
+    }
+}
+
+.footer-text {
+    color: var(--light-mode-background-color);
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    display: block;
+    width: 264px;
+}
+
+/* FOOTER SOCIAL */
+
+.footer-social {
+    text-align: center;
+    margin-bottom: 72px;
+}
+
+@media screen and (min-width: 768px) {
+    .footer-social {
+        margin-bottom: 0;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .footer-social {
+        margin-right: 80px;
+    }
+}
+
+.footer-social-text {
+    color: var(--page-background-color);
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    margin-bottom: 16px;
+}
+
+@media screen and (min-width: 768px) {
+    .footer-social-text {
+        text-align: left;
+    }
+}
+.footer-social-networks {
+    display: flex;
+    gap: 16px;
+}
+.footer-social-list {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+}
+
+.footer-social-link {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+
+    fill: var(--light-mode-background-color);
+    background-color: var(--logo-brand-color);
+    border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-social-link:hover,
+.footer-social-link:focus {
+    background-color: var(--success-messages-color);
+}
+
+.networks {
+    width: 24px;
+    height: 24px;
+}
+
+/* CONTACT FORM */
+
+.footer-form-text {
+    margin-bottom: 16px;
+    text-align: center;
+    line-height: 1.5;
+    color: var(--page-background-color);
+    letter-spacing: 0.02em;
+}
+
+@media screen and (min-width: 768px) {
+    .footer-form-text {
+        text-align: left;
+    }
+}
+
+.contact-form {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.footer-form-input {
+    height: 40px;
+    border: 1px solid var(--page-background-color);
+    background-color: transparent;
+    font-size: 12px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: var(--page-background-color);
+    padding-left: 16px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    margin-bottom: 16px;
+}
+
+@media screen and (min-width: 428px) {
+    .footer-form-input {
+        min-width: 398px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .footer-form-input {
+        min-width: 264px;
+        margin-bottom: 0;
+        margin-right: 24px;
+    }
+}
+
+.footer-form-input::placeholder {
+    color: var(--page-background-color);
+}
+
+.contact-form-btn {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+    padding: 8px 24px;
+
+    cursor: pointer;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: var(--page-background-color);
+    fill: currentColor;
+
+    background: var(--logo-brand-color);
+    border-radius: 4px;
+    border: none;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-form-btn:hover,
+.contact-form-btn:focus {
+    background-color: var(--pressed-state-color);
+}
+
+/* MODAL WINDOW */
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+
+    background-color: rgba(46, 47, 66, 0.4);
+    transition-property: opacity, visibility;
+    transition-duration: 500ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.is-hidden {
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
+}
+
+.is-hidden .modal {
+    transform: translateY(100%);
+}
+
+.modal {
+    position: absolute;
+    max-width: 95%;
+    min-height: 584px;
+    padding-left: 24px;
+    padding-right: 24px;
+    padding-top: 70px;
+    padding-bottom: 24px;
+
+    background-color: var(--modal-background-color);
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+        0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    transform: translateY(0);
+    transition-property: transform;
+    transition-duration: 500ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 428px) {
+    .modal {
+        max-width: 392px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .modal {
+        max-width: 408px;
+    }
+}
+
+.modal-close-btn {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--subtle-background-color);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 0;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-btn-icon {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1)
+}
+
+.modal-close-btn:hover,
+.modal-close-btn:focus {
+    border: none;
+    background-color: var(--pressed-state-color);
+}
+
+.modal-close-btn:hover .close-btn-icon,
+.modal-close-btn:focus .close-btn-icon {
+    fill: var(--page-background-color);
+}
+
+.modal-form-text {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: var(--hero-color);
+    margin-bottom: 16px;
+}
+
+.modal-form {
+    display: flex;
+    flex-direction: column;
+}
+
+.modal-form-div {
+    margin-bottom: 8px;
+}
+
+
+.modal-form-field {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    display: block;
+    margin-bottom: 4px;
+    color: var(--helper-text-color);
+}
+
+.modal-form-input-wrapper {
+    display: block;
+    position: relative;
+}
+
+.modal-form-input {
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    background-color: transparent;
+    padding-left: 38px;
+    color: var(--hero-color);
+    outline: transparent;
+    transition: border-color var(--transition-duration);
+}
+
+.modal-form-input:focus {
+    outline: none;
+    border-color: var(--logo-brand-color);
+}
+
+.modal-form-icon {
+    position: absolute;
+    top: 50%;
+    left: 16px;
+    transform: translateY(-50%);
+    display: block;
+    width: 18px;
+    height: 24px;
+    fill: var(--overlay-color);
+    transition: fill var(--transition-duration);
+}
+
+.modal-form-input:focus+.modal-form-icon {
+    fill: var(--logo-brand-color);
+}
+
+.modal-form-comment {
+    margin-bottom: 16px;
+}
+
+.modal-form-message {
+    resize: none;
+    width: 100%;
+    height: 120px;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    padding: 8px 16px;
+    color: rgba(46, 47, 66, 0.4);
+    border: 1px solid rgba(46, 47, 66, 0.2);
+    border-radius: 4px;
+    background-color: transparent;
+    outline: transparent;
+    transition: border-color var(--transition-duration);
+}
+
+.modal-form-message:focus {
+    outline: none;
+    border-color: var(--logo-brand-color);
+}
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+
+.modal-checkbox {
+    margin-bottom: 24px;
+}
+
+.modal-form-check-desk {
+    font-size: 12px;
+    line-height: 1.17;
+    color: var(--helper-text-color);
+}
+
+.modal-form-face-span {
+    width: 16px;
+    height: 16px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 2px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    fill: transparent;
+    margin-right: 8px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1)
+}
+
+.modal-form-check:checked+.modal-form-check-desk>.modal-form-face-span {
+    background-color: var(--pressed-state-color);
+    border: none;
+    fill: var(--page-background-color);
+    border-color: var(--pressed-state-color);
+}
+
+.privacy-policy {
+    color: var(--logo-brand-color);
+}
+
+.modal-form-submit {
+    display: block;
+    min-width: 169px;
+    margin-right: auto;
+    margin-left: auto;
+    display: block;
+    width: 169px;
+    height: 56px;
+    font-family: inherit;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    cursor: pointer;
+    border: none;
+    padding: 16px 32px;
+    border-radius: 4px;
+    color: var(--page-background-color);
+    background-color: var(--logo-brand-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    transition: background-color var(--transition-duration);
+}
+
+.modal-form-submit:hover,
+.modal-form-submit:focus {
+    background-color: var(--pressed-state-color);
+}
