--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,9 @@ ul {
 
 img {
     display: block;
+    max-width: 100%;
+    height: auto;
+       
 }
 
 button{
@@ -939,6 +942,7 @@ body {
 }
 
 .footer-form-input {
+    width: 264px;
     height: 40px;
     border: 1px solid var(--page-background-color);
     background-color: transparent;
@@ -1252,4 +1256,156 @@ body {
 .modal-form-submit:hover,
 .modal-form-submit:focus {
     background-color: var(--pressed-state-color);
+}
+
+/* PORTFOLIO */
+.portfolio {
+    padding-top: 96px;
+    padding-bottom: 120px;
+}
+.filter-button-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+    max-width: 264px;
+    margin-bottom: 48px;
+}
+
+@media screen and (min-width: 768px) {
+    .filter-button-list {
+        flex-wrap: nowrap;
+        justify-content: center;
+        max-width: 100%;
+        margin-bottom: 64px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .filter-button-list {
+        margin-bottom: 72px;
+    }
+}
+
+.filter-button {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: var(--logo-brand-color);
+    background-color: var(--light-mode-background-color);
+    border: 1px solid var(--subtle-background-color);
+    border-radius: 4px;
+    padding: 8px 15px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+            background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+            border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+            box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.filter-button:hover,
+.filter-button:focus {
+    background-color: var(--logo-brand-color);
+    border-color: var(--logo-brand-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+        0px 2px 2px rgba(0, 0, 0, 0.12);
+    color: var(--page-background-color);
+}
+
+@media screen and (min-width: 768px) {
+    .filter-button {
+        padding: 12px 24px;
+    }
+}
+
+.projects-cards-list {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 48px;
+}
+@media screen and (min-width: 1200px) {
+    .projects-cards-item {
+        flex-basis: calc((100% - 48px) / 3);
+    }
+}
+.project-link {
+    display: block;
+    transition: box-shadow;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.project-link:hover,
+.project-link:focus {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.portfolio-img {
+    width: 396px;
+}
+
+@media screen and (min-width: 768px) {
+    .portfolio-img {
+        width: 356px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .portfolio-img {
+        width: 360px;
+    }
+}
+
+.overlay-img {
+    position: relative;
+    overflow: hidden;
+}
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color: var(--light-mode-background-color);
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    padding: 40px 32px;
+    background-color: var(--logo-brand-color);
+}
+.project-link:hover .overlay,
+.project-link:focus .overlay {
+    transform: translateY(0%);
+}
+
+.project-link:hover,
+.project-link:focus {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.project-link-border {
+    padding: 32px 16px;
+    border: 1px solid var(--subtle-background-color);
+    border-top: none;
+}
+
+.project-description-title {
+    color: var(--body-brand-color);
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    margin-bottom: 8px;
+
+}
+
+.project-description-text {
+    color: var(--body-text-color);
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
 }
