--- a/css/styles.css
+++ b/css/styles.css
@@ -259,7 +259,6 @@ body {
 }
 /* /MOBILE MENU */
 
-/* TABLET HEADER */
 @media screen and (min-width: 768px) {
     .header-container {
         padding-top: 0;
@@ -317,7 +316,7 @@ body {
         gap: 4px;
     }
     .contact-info-item {
-        font-size: 16px;
+        font-size: 12px;
         font-style: normal;
         line-height: 1.5;
         letter-spacing: 0.02em; 
@@ -338,18 +337,19 @@ body {
          margin-left: auto;  
         }
     .contact-info-item{
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        font-size: 16px;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         }
     .menu-link:hover,
     .menu-link:focus {
-    color: var(--pressed-state-color);
+         color: var(--pressed-state-color);
         }
 
     .contact-info-item:hover,
     .contact-info-item:focus {
-    color: var(--pressed-state-color);
+        color: var(--pressed-state-color);
         }
-}
+    }
 
 /* HERO */
 .hero {
@@ -941,6 +941,10 @@ body {
     justify-content: center;
 }
 
+.cont-form-field {
+    margin-bottom: 16px;
+}
+
 .footer-form-input {
     width: 264px;
     height: 40px;
@@ -953,7 +957,7 @@ body {
     padding-left: 16px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
-    margin-bottom: 16px;
+    
 }
 
 @media screen and (min-width: 428px) {
@@ -964,9 +968,11 @@ body {
 
 @media screen and (min-width: 768px) {
     .footer-form-input {
-        min-width: 264px;
-        margin-bottom: 0;
+        min-width: 264px;  
+    }
+    .cont-form-field {
         margin-right: 24px;
+        margin-bottom: 0;
     }
 }
 
